[gd_scene load_steps=16 format=3 uid="uid://vvdlbyarcrqp"]

[ext_resource type="Script" path="res://Level.gd" id="1_ypql6"]
[ext_resource type="PackedScene" uid="uid://c1no6g63ae2al" path="res://player.tscn" id="2_83ir6"]
[ext_resource type="PackedScene" uid="uid://clfhv0k3obo7t" path="res://tile_manager.tscn" id="3_yq7lv"]
[ext_resource type="PackedScene" uid="uid://c3qol24ks2ua1" path="res://slicer.tscn" id="4_586vs"]
[ext_resource type="Script" path="res://Background.gd" id="5_xscyh"]
[ext_resource type="Texture2D" uid="uid://d15ih7hfiwltq" path="res://assets/background.png" id="6_ow1v5"]
[ext_resource type="Texture2D" uid="uid://djyipxrrphgeu" path="res://assets/small_stars.png" id="7_v1rfy"]
[ext_resource type="Texture2D" uid="uid://q171g8war6qe" path="res://assets/far_planets.png" id="8_kh3yv"]
[ext_resource type="Texture2D" uid="uid://b07ea2sple2ge" path="res://assets/close_planets.png" id="9_vyqj0"]
[ext_resource type="Texture2D" uid="uid://itwndqbeoi02" path="res://assets/Blackhole.png" id="10_85xtt"]
[ext_resource type="Texture2D" uid="uid://da6gfektd17gn" path="res://assets/eye_5.png" id="11_2rhjj"]
[ext_resource type="Texture2D" uid="uid://bf18pcxgxuaxd" path="res://assets/mage_hand.png" id="12_awg6t"]
[ext_resource type="Texture2D" uid="uid://cxh4i0p0e6hmq" path="res://assets/q_indicator.png" id="13_o15i4"]
[ext_resource type="Texture2D" uid="uid://dft7njf55p5ic" path="res://assets/knife_with_sheen.png" id="14_cwory"]
[ext_resource type="Texture2D" uid="uid://bojggysvoarrh" path="res://assets/e_indicator.png" id="15_0atma"]

[node name="Level" type="Node2D"]
script = ExtResource("1_ypql6")
playerScene = ExtResource("2_83ir6")
tileManagerScene = ExtResource("3_yq7lv")
slicerScene = ExtResource("4_586vs")

[node name="LevelName" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource("5_xscyh")

[node name="SpaceBackground" type="Sprite2D" parent="Background"]
modulate = Color(0.384314, 0.384314, 0.384314, 1)
z_index = -6
texture_filter = 1
texture_repeat = 2
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("6_ow1v5")

[node name="StarLayer" type="ParallaxLayer" parent="Background"]
z_index = -5
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1280, 0)

[node name="Stars" type="Sprite2D" parent="Background/StarLayer"]
z_index = -5
texture_filter = 1
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("7_v1rfy")

[node name="FarPlanetsLayer" type="ParallaxLayer" parent="Background"]
z_index = -4
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1280, 0)

[node name="FarPlanets" type="Sprite2D" parent="Background/FarPlanetsLayer"]
z_index = -4
texture_filter = 1
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("8_kh3yv")

[node name="ClosePlanetsLayer" type="ParallaxLayer" parent="Background"]
z_index = -3
motion_mirroring = Vector2(1280, 0)

[node name="ClosePlanets" type="Sprite2D" parent="Background/ClosePlanetsLayer"]
z_index = -3
texture_filter = 1
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("9_vyqj0")

[node name="Blackhole" type="Sprite2D" parent="Background"]
modulate = Color(0.384314, 0.384314, 0.384314, 1)
z_index = -2
texture_filter = 1
texture_repeat = 2
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("10_85xtt")

[node name="Eye" type="Sprite2D" parent="Background"]
visible = false
z_index = -2
texture_filter = 1
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("11_2rhjj")

[node name="Slicer" parent="." instance=ExtResource("4_586vs")]

[node name="HandGroup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1086.0
offset_top = 621.0
offset_right = 1184.0
offset_bottom = 719.0

[node name="HandIcon" type="TextureRect" parent="HandGroup"]
texture_filter = 1
layout_mode = 0
offset_right = 98.0
offset_bottom = 98.0
texture = ExtResource("12_awg6t")

[node name="HandKeyHint" type="TextureRect" parent="HandGroup"]
texture_filter = 1
layout_mode = 0
offset_top = 64.0
offset_right = 40.0
offset_bottom = 104.0
texture = ExtResource("13_o15i4")

[node name="KnifeGroup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1182.0
offset_top = 621.0
offset_right = 1222.0
offset_bottom = 661.0

[node name="KnifeIcon" type="TextureRect" parent="KnifeGroup"]
texture_filter = 1
layout_mode = 0
offset_right = 98.0
offset_bottom = 98.0
texture = ExtResource("14_cwory")

[node name="CutsRemaining" type="Label" parent="KnifeGroup"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 23.0
text = "x3"

[node name="KnifeKeyHint" type="TextureRect" parent="KnifeGroup"]
texture_filter = 1
layout_mode = 0
offset_left = 67.0
offset_top = 64.0
offset_right = 107.0
offset_bottom = 104.0
texture = ExtResource("15_0atma")

[connection signal="cut_at" from="Slicer" to="." method="_on_slicer_cut_at"]
